# monteiro

./: Cargo.toml  README.md  TODO.md  build.toml  montefile.toml  test.sh  todo.md
.github/workflows/: rust.yml
monteiro/: Cargo.toml
src/: arg.rs  cli.rs  data.rs  docker.rs  git.rs  main.rs  run.rs  server.rs  startup.rs  toml.rs
