[package]
name = "monteiro"
version = "0.1.0"
edition = "2024"

[dependencies]
systemctl = "0.5.0"
bollard = "*"
clap = { version = "4.5.40", features = ["derive"] }
git2 = "0.20.1"
homedir = "0.3.4"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
